--- a/JavaApiTestAutomayion/build.gradle
+++ b/JavaApiTestAutomayion/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.11.0")
     implementation("org.assertj:assertj-core:3.24.2")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
