--- a/Dependecies/build.gradle
+++ b/Dependecies/build.gradle
@@ -10,8 +10,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
 }
 
 test {
