--- a/Dependecies/build.gradle
+++ b/Dependecies/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5'
 }
 
 test {
